--- a/signUp.html
+++ b/signUp.html
@@ -38,7 +38,7 @@
         </button>
         <p class="text-white">
           You have an account?
-          <a class="text-white" href="/index.html">Sign In</a>
+          <a class="text-white" href="index.html">Sign In</a>
         </p>
       </div>
     </div>
