--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
             <li class="nav-item mt-md-4 mb-3">
               <a
                 class="nav-link btn btn-outline-warning border border-warning "
-                href="/"
+                href="index.html"
                 onclick="logout()"
                 >Logout</a
               >
